stop features list overflowing / scrollbar

--- a/web/styles/project/_lists.scss
+++ b/web/styles/project/_lists.scss
@@ -21,3 +21,7 @@
         }
     }
 }
+
+.search-list {
+    overflow-x: hidden !important;
+}
